9-canary-deploy/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    app: nginx
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
